using Wacton.desu dictionary

--- a/Kawazu/Kawazu.csproj
+++ b/Kawazu/Kawazu.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
       <PackageReference Include="LibNMeCab" Version="0.10.1" />
       <PackageReference Include="LibNMeCab.IpaDicBin" Version="0.10.0" />
+      <PackageReference Include="Wacton.Desu" Version="5.1.0" />
         <None Include="Kawazu_icon.png" Pack="true" PackagePath="" />
     </ItemGroup>
 </Project>
